lib/asparser/y.output
Terminals unused in grammar

   FILENAME
   STAT_TIME_SOLVING
   STAT_TIME_UNSAT


Grammar

    0 $accept: output $end

    1 output: output_header answerset_list stat_list
    2       | output_header answerset_list SATISFIABLE stat_list
    3       | output_header UNSATISFIABLE stat_list
    4       | output_header UNKNOWN

    5 answerset_list: answerset
    6               | answerset_list answerset

    7 output_header: HEADER

    8 answerset: answer_header atoms OPTIMUMFOUND
    9          | answer_header atoms

   10 answer_header: ANSWER num

   11 atoms: fterm
   12      | atoms fterm

   13 fterm: id
   14      | id '(' termlist ')'

   15 termlist: term
   16         | termlist ',' term

   17 term: id
   18     | num
   19     | string

   20 stat_list: stat
   21          | stat_list stat

   22 stat: statname ':' seconds '(' stat_list ')'
   23     | statname ':' num '+'
   24     | statname ':' seconds
   25     | statname ':' num
   26     | statname ':' id
   27     | STAT_TIME_FIRST_MODEL ':' seconds

   28 statname: STATNAME
   29         | statname STATNAME

   30 seconds: SECONDS

   31 id: ID

   32 num: NUMBER

   33 string: STRING


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 22
')' (41) 14 22
'+' (43) 23
',' (44) 16
':' (58) 22 23 24 25 26 27
error (256)
HEADER (258) 7
ANSWER (259) 10
OPTIMUMFOUND (260) 8
SATISFIABLE (261) 2
UNSATISFIABLE (262) 3
UNKNOWN (263) 4
NUMBER (264) 32
ID (265) 31
STRING (266) 33
SECONDS (267) 30
FILENAME (268)
STATNAME (269) 28 29
STAT_TIME_SOLVING (270)
STAT_TIME_FIRST_MODEL (271) 27
STAT_TIME_UNSAT (272)


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
output (24)
    on left: 1 2 3 4, on right: 0
answerset_list (25)
    on left: 5 6, on right: 1 2 6
output_header (26)
    on left: 7, on right: 1 2 3 4
answerset (27)
    on left: 8 9, on right: 5 6
answer_header (28)
    on left: 10, on right: 8 9
atoms (29)
    on left: 11 12, on right: 8 9 12
fterm (30)
    on left: 13 14, on right: 11 12
termlist (31)
    on left: 15 16, on right: 14 16
term (32)
    on left: 17 18 19, on right: 15 16
stat_list (33)
    on left: 20 21, on right: 1 2 3 21 22
stat (34)
    on left: 22 23 24 25 26 27, on right: 20 21
statname (35)
    on left: 28 29, on right: 22 23 24 25 26 29
seconds (36)
    on left: 30, on right: 22 24 27
id (37)
    on left: 31, on right: 13 14 17 26
num (38)
    on left: 32, on right: 10 18 23 25
string (39)
    on left: 33, on right: 19


State 0

    0 $accept: . output $end

    HEADER  shift, and go to state 1

    output         go to state 2
    output_header  go to state 3


State 1

    7 output_header: HEADER .

    $default  reduce using rule 7 (output_header)


State 2

    0 $accept: output . $end

    $end  shift, and go to state 4


State 3

    1 output: output_header . answerset_list stat_list
    2       | output_header . answerset_list SATISFIABLE stat_list
    3       | output_header . UNSATISFIABLE stat_list
    4       | output_header . UNKNOWN

    ANSWER         shift, and go to state 5
    UNSATISFIABLE  shift, and go to state 6
    UNKNOWN        shift, and go to state 7

    answerset_list  go to state 8
    answerset       go to state 9
    answer_header   go to state 10


State 4

    0 $accept: output $end .

    $default  accept


State 5

   10 answer_header: ANSWER . num

    NUMBER  shift, and go to state 11

    num  go to state 12


State 6

    3 output: output_header UNSATISFIABLE . stat_list

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    stat_list  go to state 15
    stat       go to state 16
    statname   go to state 17


State 7

    4 output: output_header UNKNOWN .

    $default  reduce using rule 4 (output)


State 8

    1 output: output_header answerset_list . stat_list
    2       | output_header answerset_list . SATISFIABLE stat_list
    6 answerset_list: answerset_list . answerset

    ANSWER                 shift, and go to state 5
    SATISFIABLE            shift, and go to state 18
    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    answerset      go to state 19
    answer_header  go to state 10
    stat_list      go to state 20
    stat           go to state 16
    statname       go to state 17


State 9

    5 answerset_list: answerset .

    $default  reduce using rule 5 (answerset_list)


State 10

    8 answerset: answer_header . atoms OPTIMUMFOUND
    9          | answer_header . atoms

    ID  shift, and go to state 21

    atoms  go to state 22
    fterm  go to state 23
    id     go to state 24


State 11

   32 num: NUMBER .

    $default  reduce using rule 32 (num)


State 12

   10 answer_header: ANSWER num .

    $default  reduce using rule 10 (answer_header)


State 13

   28 statname: STATNAME .

    $default  reduce using rule 28 (statname)


State 14

   27 stat: STAT_TIME_FIRST_MODEL . ':' seconds

    ':'  shift, and go to state 25


State 15

    3 output: output_header UNSATISFIABLE stat_list .
   21 stat_list: stat_list . stat

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    $default  reduce using rule 3 (output)

    stat      go to state 26
    statname  go to state 17


State 16

   20 stat_list: stat .

    $default  reduce using rule 20 (stat_list)


State 17

   22 stat: statname . ':' seconds '(' stat_list ')'
   23     | statname . ':' num '+'
   24     | statname . ':' seconds
   25     | statname . ':' num
   26     | statname . ':' id
   29 statname: statname . STATNAME

    STATNAME  shift, and go to state 27
    ':'       shift, and go to state 28


State 18

    2 output: output_header answerset_list SATISFIABLE . stat_list

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    stat_list  go to state 29
    stat       go to state 16
    statname   go to state 17


State 19

    6 answerset_list: answerset_list answerset .

    $default  reduce using rule 6 (answerset_list)


State 20

    1 output: output_header answerset_list stat_list .
   21 stat_list: stat_list . stat

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    $default  reduce using rule 1 (output)

    stat      go to state 26
    statname  go to state 17


State 21

   31 id: ID .

    $default  reduce using rule 31 (id)


State 22

    8 answerset: answer_header atoms . OPTIMUMFOUND
    9          | answer_header atoms .
   12 atoms: atoms . fterm

    OPTIMUMFOUND  shift, and go to state 30
    ID            shift, and go to state 21

    $default  reduce using rule 9 (answerset)

    fterm  go to state 31
    id     go to state 24


State 23

   11 atoms: fterm .

    $default  reduce using rule 11 (atoms)


State 24

   13 fterm: id .
   14      | id . '(' termlist ')'

    '('  shift, and go to state 32

    $default  reduce using rule 13 (fterm)


State 25

   27 stat: STAT_TIME_FIRST_MODEL ':' . seconds

    SECONDS  shift, and go to state 33

    seconds  go to state 34


State 26

   21 stat_list: stat_list stat .

    $default  reduce using rule 21 (stat_list)


State 27

   29 statname: statname STATNAME .

    $default  reduce using rule 29 (statname)


State 28

   22 stat: statname ':' . seconds '(' stat_list ')'
   23     | statname ':' . num '+'
   24     | statname ':' . seconds
   25     | statname ':' . num
   26     | statname ':' . id

    NUMBER   shift, and go to state 11
    ID       shift, and go to state 21
    SECONDS  shift, and go to state 33

    seconds  go to state 35
    id       go to state 36
    num      go to state 37


State 29

    2 output: output_header answerset_list SATISFIABLE stat_list .
   21 stat_list: stat_list . stat

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    $default  reduce using rule 2 (output)

    stat      go to state 26
    statname  go to state 17


State 30

    8 answerset: answer_header atoms OPTIMUMFOUND .

    $default  reduce using rule 8 (answerset)


State 31

   12 atoms: atoms fterm .

    $default  reduce using rule 12 (atoms)


State 32

   14 fterm: id '(' . termlist ')'

    NUMBER  shift, and go to state 11
    ID      shift, and go to state 21
    STRING  shift, and go to state 38

    termlist  go to state 39
    term      go to state 40
    id        go to state 41
    num       go to state 42
    string    go to state 43


State 33

   30 seconds: SECONDS .

    $default  reduce using rule 30 (seconds)


State 34

   27 stat: STAT_TIME_FIRST_MODEL ':' seconds .

    $default  reduce using rule 27 (stat)


State 35

   22 stat: statname ':' seconds . '(' stat_list ')'
   24     | statname ':' seconds .

    '('  shift, and go to state 44

    $default  reduce using rule 24 (stat)


State 36

   26 stat: statname ':' id .

    $default  reduce using rule 26 (stat)


State 37

   23 stat: statname ':' num . '+'
   25     | statname ':' num .

    '+'  shift, and go to state 45

    $default  reduce using rule 25 (stat)


State 38

   33 string: STRING .

    $default  reduce using rule 33 (string)


State 39

   14 fterm: id '(' termlist . ')'
   16 termlist: termlist . ',' term

    ')'  shift, and go to state 46
    ','  shift, and go to state 47


State 40

   15 termlist: term .

    $default  reduce using rule 15 (termlist)


State 41

   17 term: id .

    $default  reduce using rule 17 (term)


State 42

   18 term: num .

    $default  reduce using rule 18 (term)


State 43

   19 term: string .

    $default  reduce using rule 19 (term)


State 44

   22 stat: statname ':' seconds '(' . stat_list ')'

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14

    stat_list  go to state 48
    stat       go to state 16
    statname   go to state 17


State 45

   23 stat: statname ':' num '+' .

    $default  reduce using rule 23 (stat)


State 46

   14 fterm: id '(' termlist ')' .

    $default  reduce using rule 14 (fterm)


State 47

   16 termlist: termlist ',' . term

    NUMBER  shift, and go to state 11
    ID      shift, and go to state 21
    STRING  shift, and go to state 38

    term    go to state 49
    id      go to state 41
    num     go to state 42
    string  go to state 43


State 48

   21 stat_list: stat_list . stat
   22 stat: statname ':' seconds '(' stat_list . ')'

    STATNAME               shift, and go to state 13
    STAT_TIME_FIRST_MODEL  shift, and go to state 14
    ')'                    shift, and go to state 50

    stat      go to state 26
    statname  go to state 17


State 49

   16 termlist: termlist ',' term .

    $default  reduce using rule 16 (termlist)


State 50

   22 stat: statname ':' seconds '(' stat_list ')' .

    $default  reduce using rule 22 (stat)
